# Pai99-PeriphTest

./: CMakeLists.txt  Makefile  README.md  doCmake.sh  如何构建这个项目？.md
Ilikara-Lib/Lib/inc/: FileOption.hpp  Timer.hpp
Ilikara-Lib/TestCode/inc/: test.hpp
Ilikara-Lib/TestCode/src/: ensure_pwm_freq.cpp  imitate_terminal.cpp  ocv_ctrl_servo.cpp  signal_sim_timer_interrupt.cpp
Lib/inc/: PwmDef.hpp
Lib/src/: StylePrint.cpp
My-Lib/: doCmake.sh
My-Lib/Lib/inc/: GpioDef.hpp
My-Lib/Lib/src/: GpioDef.cpp  UartDef.cpp
My-Lib/TestCode/src/: gpio_out_in.cpp  keyboard_ctrl_servo.cpp  pwm_output.cpp  (+6 more)
Push/: CMakeLists.txt  doCmake.sh
Push/User/: main.cpp
TestCode/inc/: test.hpp
TestCode/src/: keyboard_ctrl_car.cpp  keyboard_read.cpp  ocv_avoid_obstacles.cpp  ocv_ctrl_car_with_pid.cpp  ocv_ctrl_car_with_pidclass.cpp  thread_timer.cpp  toggle_led.cpp
User/: main.cpp  main.hpp
With-Ilikara-Lib/: CMakeLists.txt  Emain  Makefile  doCmake.sh
With-Ilikara-Lib/Lib/inc/: KeyDef.hpp  PIDObject.hpp  StylePrint.hpp
With-Ilikara-Lib/Lib/src/: KeyDef.cpp  PIDController.cpp  PIDObject.cpp  Timer.cpp
With-Ilikara-Lib/TestCode/inc/: test.hpp
With-Ilikara-Lib/TestCode/src/: final_exec.cpp  gpio_output.cpp  keyboard_ctrl_car.cpp  keyboard_ctrl_servo.cpp  motor_drive.cpp  obtc_avds_with_cam.cpp  obtc_avds_with_vl53l0x.cpp  ocv_ctrl_car_with_pid.cpp  pwm_output.cpp  read_distance.cpp  read_num_from_file.cpp  set_88_89_input_mode.cpp  thread_sim_timer_interrupt.cpp  vl53l0x_obtc_avds.cpp  wonderEcho_sound.cpp
With-Ilikara-Lib/User/: main.cpp  main.hpp
With-My-Lib/: doCmake.sh  domake.sh
(+16 files in other folders)
